<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|center_vertical"
    android:layout_marginBottom="50dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginTop="50dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Cardview desc -->
        <TextView
            android:id="@+id/signinDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/signinDesc"
            android:textColor="@color/custom"
            android:textSize="20dp" />

        <!-- Username -->
        <EditText
            android:id="@+id/inputUsernameCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputUsernameCreateHint"
            android:inputType="text"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="@color/custom"
            android:textSize="15dp" />

        <!-- Password & password confirm-->
        <EditText
            android:id="@+id/inputPasswordCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputPasswordCreateHint"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="@color/custom"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/inputConfirmPasswordCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputConfirmPasswordCreateHint"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="@color/custom"
            android:textSize="15dp" />

        <!-- Firstname -->
        <EditText
            android:id="@+id/inputFirstNameCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputFirstNameCreateHnt"
            android:inputType="text"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="@color/custom"
            android:textSize="15dp" />

        <!-- Lastname -->
        <EditText
            android:id="@+id/inputLastNameCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputLastNameCreateHint"
            android:inputType="text"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="@color/custom"
            android:textSize="15dp" />

        <!-- Birthdate date -->
        <EditText
            android:id="@+id/inputBirthdayCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputBirthdayDateCreateHint"
            android:inputType="date"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="@color/custom"
            android:textSize="15dp" />

        <!-- Email -->
        <EditText
            android:id="@+id/inputEmailCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputEmailCreateHint"
            android:inputType="textEmailAddress"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="@color/custom"
            android:textSize="15dp" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="20dp"
                android:background="@drawable/button_roundcorner_shape"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/buttonCreate"
                android:textColor="@color/white" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvAlreadyAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/alreadyAccount"
            android:textColor="@color/custom"
            android:textSize="12dp" />

    </LinearLayout>

</android.support.v7.widget.CardView>
